style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

body {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	background-color: #1F2937;
	font-family: Roboto, sans-serif;

}

header {
	display: flex;
	justify-content: space-around;
	align-items: center;
	padding: 0 16px;
}

ul {
	list-style-type: none;
	padding: 0px;
	margin: 0px;
}

header ul {
	display: flex;
	gap: 24px;
}

footer {
	display: flex;
	align-items: center;
	justify-content: center;
	color: #f9faf8;
}

main {
	flex: 1;
}

.banner {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 32px;
	padding: 10em 0;
	flex-wrap: wrap;
}

.hero-text {
	max-width: 500px;
	min-width: 300px;
}

.hero-text p{
 	margin: 0 0 18px;
}

.banner-image img {
	width: 550px;
	height: auto;
}

button {
	background-color:#3882F6;
	border-radius: 8px;
	padding: 8px 32px;
	border: none;
	font-size: 20px;
	color: #f9faf8;
}

.banner-image {
	display: flex;
	align-items: center;
}

.information {
	text-align: center;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	background-color: white;
	padding: 2em;
}

.info-cards {
	display: flex;
	gap: 64px;
	flex-wrap: wrap;
	justify-content: center;
}

.info-cards section{
	display: flex;
	flex-direction: column;
	align-items: center;
	max-width: 200px;

}

.card {
	border-radius: 20px;
	width: 200px;
	height: 200px;
	margin: 8px;
	border: 4px solid rgb(36, 113, 255);
	display: flex;
	justify-content: center;
	align-items: center;
}

section div {
	text-align: center;
}

.testimonial {
	background-color: #e5e7eb;
	color: #1f2937;
	margin: 0;
	padding: 10em;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.testimonial .quote {
	margin: 0;
	padding: 0px;
	font-size: 36px;
	font-style: italic;
	font-weight: 300;
	max-width: 800px;
	min-width: 450px;
}

#thor {
	margin: 0px;
	font-size: 28px;
	font-weight: bolder;
	padding: 0 0 0 15em;
}

.cta {
	background-color: white;
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 128px; 256px;
}

.cta .container{
	background-color: #3882F6;
	border-radius: 10px;
	display: flex;
	padding: 64px;
	width: 60em;
	justify-content: space-evenly;
	flex-wrap: wrap;
	gap: 16px;
}

.container h3 {

	color: #f9faf8;
	margin: 0;

}

.container p {
	color: #e5e7eb;
	margin: 0;
}

.container button {
	border: 2px solid white;
}

/* FONTS */

header a,
.hero-text p {
	font-size: 18px;
	color: #e5e7eb;
}
header a {
	text-decoration: none;
}

.hero-text h1 {
	font-size: 48px;
	font-weight: 900;
	color: #f9faf8;
	margin: 0;
}

header h1{
	font-size: 24px;
	color: #f9faf8
}

.information h2 {
	font-size: 36px;
	font-weight: 900;
	color: #1f2937;
}

.subtext {
	color: grey;
}

